--- a/Request_Login_Phone_v1.2.3.csproj
+++ b/Request_Login_Phone_v1.2.3.csproj
@@ -21,6 +21,9 @@
     <None Update="input\listProxy.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="input\Nofind.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="input\Nootp.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
